# mindisland

./: .gitignore  CLAUDE.md  DESIGN.md  build.ps1  build.sh  dev.ps1  dev.sh  index.html  package.json  setup.ps1  setup.sh  vite.config.ts
docs/: agent-integration.md  architecture.md  getting-started.md  lessons-learned.md  research-analysis.md  roadmap.md
hooks/: mindisland-claude-hook.sh  mindisland-opencode-plugin.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: event.rs  hook_installer.rs  lib.rs  main.rs  session.rs  session_registry.rs  tray.rs
src-tauri/src/agents/: claude.rs  claude_discovery.rs  mod.rs  opencode.rs  ultrawork.rs
src/components/: SessionList.tsx  SessionRow.tsx
src/stores/: sessions.ts
